--- a/login.html
+++ b/login.html
@@ -5,40 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasmu Platform</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/login.css">
 </head>
 
 <body>
-    <section class="login-form-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <img src="assets/images/login-page-image.png" alt="">
-                </div>
-                <div class="col-6">
-                    <img src="assets/images/logo-first.png" alt="">
-                    <form action="">
-
-                    </form>
+    <section class="login-form-section position-relative">
+        <div class="container position-absolute top-50 start-50 translate-middle">
+            <div class="col-12 col-lg-9 mx-auto">
+                <div class="row login-row align-items-end py-5 px-4">
+                    <div class="col-6">
+                        <img src="assets/images/login-page-image.png" class="w-100 h-100 object-fit-contain" alt="">
+                    </div>
+                    <div class="col-6 px-5">
+                        <div class="img-wrapper text-center mb-4">
+                            <img src="assets/images/logo-first.png" alt="">
+                        </div>
+                        <form action="" class="p-4 d-flex flex-column">
+                            <h3 class="mb-5 text-center">Form</h3>
+                            <label for="" class="mb-2">E-mail</label>
+                            <input type="email" class="mb-3">
+                            <label for="" class="mb-2">Password</label>
+                            <input type="password" class="mb-3">
+                            <div class="d-flex align-items-center gap-2 ms-2">
+                                <input type="checkbox" id="keep-signed">
+                                <label for="keep-signed" class="fs-14">Keep me signed in</label>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <div class="container login-form-section">
-        <div class="row">
-            <div class="col-6">
-                <img src="assets/images/login-page-image.png" alt="">
-            </div>
-            <div class="col-6">
-                <img src="assets/images/logo-first.png" alt="">
-                <form action="">
-
-                </form>
-            </div>
-        </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
