--- a/login.html
+++ b/login.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <section class="login-form-section position-relative">
-        <div class="container position-absolute top-50 start-50 translate-middle">
-            <div class="col-12 col-lg-9 mx-auto">
-                <div class="row login-row align-items-end py-5 px-4">
-                    <div class="col-6">
+    <section class="login-form-section d-flex justify-content-center align-items-center">
+        <div class="container">
+            <div class="col-12 col-xl-9 mx-auto">
+                <div class="row login-row align-items-end py-5 px-4 flex-column-reverse flex-lg-row">
+                    <div class="col-12 col-lg-6">
                         <img src="assets/images/login-page-image.png" class="w-100 h-100 object-fit-contain" alt="">
                     </div>
-                    <div class="col-6 px-5">
+                    <div class="col-12 col-lg-6 px-5">
                         <div class="img-wrapper text-center mb-4">
                             <img src="assets/images/logo-first.png" alt="">
                         </div>
