--- a/common-operating-view.html
+++ b/common-operating-view.html
@@ -14,29 +14,32 @@
 <body>
     <div id="wrapper" class="toggled">
         <aside id="sidebar-wrapper" class="px-2 py-3">
+            <div class="sidebar-btn position-absolute ">
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
             <div class="sidebar-brand text-start mb-4">
                 <a href="#" class="navbar-brand" id="sidebar-toggle">
                     <img src="assets/images/logo-sidebar.png" alt="" />
                 </a>
             </div>
-            <ul class="sidebar-nav p-0 m-0 list-unstyled">
+            <ul class="sidebar-nav p-0 m-0 list-unstyled overflow-hidden">
                 <li class="active">
                     <a href="#"
-                        class="d-flex align-items-center justify-content-start py-2 rounded-2 gap-4 text-white fw-bold"><i
+                        class="d-flex align-items-center justify-content-start rounded-2 gap-4 text-white fw-bold text-nowrap"><i
                             class="fa fa-home"></i>
                         <span>Common Operating View</span>
                     </a>
                 </li>
                 <li>
                     <a href="#"
-                        class="d-flex align-items-center justify-content-start py-2 rounded-2 gap-4 text-white fw-bold"><i
+                        class="d-flex align-items-center justify-content-start rounded-2 gap-4 text-white fw-bold text-nowrap"><i
                             class="fa fa-home"></i>
                         <span>Business Intelligence Dashboard</span>
                     </a>
                 </li>
                 <li>
                     <a href="#"
-                        class="d-flex align-items-center justify-content-start py-2 rounded-2 gap-4 text-white fw-bold"><i
+                        class="d-flex align-items-center justify-content-start rounded-2 gap-4 text-white fw-bold text-nowrap"><i
                             class="fa fa-home"></i>
                         <span>Smart Parking</span>
                     </a>
@@ -71,46 +74,46 @@
                                         </ul>
                                     </div>
 
-                                    <div class="column">
+                                    <div class="column dropdown-columns">
                                         <div class="dropdown-items-heading mb-2 pb-2">
                                             <h6 class="">Time</h6>
                                         </div>
                                         <ul class="p-0 m-0 list-unstyled d-flex flex-column gap-2">
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="full-day" />
-                                                <label for="full-day">Full Day</label>
+                                                <label for="full-day" class="ps-2">Full Day</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="day" />
-                                                <label for="day">Day</label>
+                                                <label for="day" class="ps-2">Day</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="afternoon" />
-                                                <label for="afternoon">Afternoon</label>
+                                                <label for="afternoon" class="ps-2">Afternoon</label>
                                             </li>
                                         </ul>
                                     </div>
 
-                                    <div class="column">
+                                    <div class="column dropdown-columns">
                                         <div class="dropdown-items-heading mb-2 pb-2">
                                             <h6 class="text-nowrap">Time Interval</h6>
                                         </div>
                                         <ul class="p-0 m-0 list-unstyled d-flex flex-column gap-2">
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="real-time" />
-                                                <label for="real-time">Real Time</label>
+                                                <label for="real-time" class="ps-2">Real Time</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="15-mins" />
-                                                <label for="15-mins">15 Mins</label>
+                                                <label for="15-mins" class="ps-2">15 Mins</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="30-mins" />
-                                                <label for="30-mins">30 Mins</label>
+                                                <label for="30-mins" class="ps-2">30 Mins</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="1-hour" />
-                                                <label for="1-hour">1 Hour</label>
+                                                <label for="1-hour" class="ps-2">1 Hour</label>
                                             </li>
                                         </ul>
                                     </div>
@@ -158,46 +161,46 @@
                                         </ul>
                                     </div>
 
-                                    <div class="column">
+                                    <div class="column dropdown-columns">
                                         <div class="dropdown-items-heading mb-2 pb-2">
                                             <h6 class="">Time</h6>
                                         </div>
                                         <ul class="p-0 m-0 list-unstyled d-flex flex-column gap-2">
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="full-day" />
-                                                <label for="full-day">Full Day</label>
+                                                <label for="full-day" class="ps-2">Full Day</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="day" />
-                                                <label for="day">Day</label>
+                                                <label for="day" class="ps-2">Day</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="afternoon" />
-                                                <label for="afternoon">Afternoon</label>
+                                                <label for="afternoon" class="ps-2">Afternoon</label>
                                             </li>
                                         </ul>
                                     </div>
 
-                                    <div class="column">
+                                    <div class="column dropdown-columns">
                                         <div class="dropdown-items-heading mb-2 pb-2">
                                             <h6 class="text-nowrap">Time Interval</h6>
                                         </div>
                                         <ul class="p-0 m-0 list-unstyled d-flex flex-column gap-2">
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="real-time" />
-                                                <label for="real-time">Real Time</label>
+                                                <label for="real-time" class="ps-2">Real Time</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="15-mins" />
-                                                <label for="15-mins">15 Mins</label>
+                                                <label for="15-mins" class="ps-2">15 Mins</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="30-mins" />
-                                                <label for="30-mins">30 Mins</label>
+                                                <label for="30-mins" class="ps-2">30 Mins</label>
                                             </li>
-                                            <li class="d-flex align-items-center gap-2">
+                                            <li class="d-flex align-items-center">
                                                 <input type="checkbox" id="1-hour" />
-                                                <label for="1-hour">1 Hour</label>
+                                                <label for="1-hour" class="ps-2">1 Hour</label>
                                             </li>
                                         </ul>
                                     </div>
@@ -263,28 +266,23 @@
                     <img src="assets/images/gender_composition.png" class="w-100" alt="">
                 </div>
             </div>
-            <div class="toggle-btns">
-                <div class="d-flex align-items-center justify-content-center flex-column mb-2">
-                    <div class="form-check form-switch p-0 d-flex align-items-center gap-2">
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Traffic</label>
-                        <input class="form-check-input m-0 float-none" type="checkbox" role="switch"
-                            id="flexSwitchCheckDefault">
-                    </div>
-                </div>
-                <div class="d-flex align-items-center justify-content-center flex-column mb-2">
-                    <div class="form-check form-switch p-0 d-flex align-items-center gap-2">
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Crowd</label>
-                        <input class="form-check-input m-0 float-none" type="checkbox" role="switch"
-                            id="flexSwitchCheckDefault">
-                    </div>
-                </div>
+            <div class="toggle-btns-wrapper">
                 <div class="d-flex align-items-center justify-content-center flex-column">
-                    <div class="form-check form-switch p-0 d-flex align-items-center gap-2">
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Weather</label>
-                        <input class="form-check-input m-0 float-none" type="checkbox" role="switch"
-                            id="flexSwitchCheckDefault">
+                    <div class="form-check form-switch p-0 d-flex align-items-center toggle-btn  mb-2">
+                        <label class="form-check-label pe-2" for="traffic">Traffic</label>
+                        <input class="form-check-input m-0 float-none" type="checkbox" role="switch" id="traffic">
+                    </div>
+
+                    <div class="form-check form-switch p-0 d-flex align-items-center toggle-btn  mb-2">
+                        <label class="form-check-label pe-2" for="crowd">Crowd</label>
+                        <input class="form-check-input m-0 float-none" type="checkbox" role="switch" id="crowd">
+                    </div>
+                    <div class="form-check form-switch p-0 d-flex align-items-center toggle-btn  mb-2">
+                        <label class="form-check-label pe-2" for="weather">Weather</label>
+                        <input class="form-check-input m-0 float-none" type="checkbox" role="switch" id="weather">
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
